syntax = "proto3";
option go_package = "./publisher";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Publisher {
  rpc PushTask(TaskSpec) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/publisher/task"
      body: "*"
    };
  }
}

message TaskSpec {
  string id = 1;
  string name = 2;
  string loc =3;
  string assigned_node = 4;
  int64 creation_time = 5;
  string sumname =6;
  string type=7;
}
